tests/typeof/typeof.exp
Error ------------------------------------------------------------- maybe.js:9:2

Cannot cast `'foo'` to `typeof x` because string [1] is incompatible with
number [2].


Error ---------------------------------------------------------- optional.js:9:2

Cannot cast `null` to `typeof x` because null [1] is incompatible with
number [2].


Error ---------------------------------------------------------- typeof.js:43:19

Cannot assign `MyClass1` to `b` because statics of `MyClass1` [1] is
incompatible with `MyClass1` [2].


Error ---------------------------------------------------------- typeof.js:53:26

Cannot assign `new MyClass2()` to `c` because `MyClass2` [1] is incompatible
with `typeof MyClass2` [2].


Error ---------------------------------------------------------- typeof.js:61:26

Cannot assign `'asdf'` to `e` because string [1] is incompatible with
number [2].


Error ---------------------------------------------------------- typeof.js:73:15

Cannot reference type `numberAlias` [1] from a value position.


Error ---------------------------------------------------------- typeof.js:82:18

Cannot use object literal as a type because object literal is a value. To get
the type of a value use `typeof`.


Error: union.js:9
  9: (null: typeof x); // error: null ~> number|string
      ^^^^ null. This type is incompatible with
  9: (null: typeof x); // error: null ~> number|string
            ^^^^^^^^ union: `A` | `B`
  Member 1:
    9: (null: typeof x); // error: null ~> number|string
              ^^^^^^^^ A
  Error:
    8: const x = f(42, 'foo');
                   ^^ number
    9: (null: typeof x); // error: null ~> number|string
        ^^^^ null. This type is incompatible with the expected param type of
    9: (null: typeof x); // error: null ~> number|string
              ^^^^^^^^ number
  Member 2:
    9: (null: typeof x); // error: null ~> number|string
              ^^^^^^^^ B
  Error:
    8: const x = f(42, 'foo');
                       ^^^^^ string
    9: (null: typeof x); // error: null ~> number|string
        ^^^^ null. This type is incompatible with the expected param type of
    9: (null: typeof x); // error: null ~> number|string
              ^^^^^^^^ string


Found 8 errors
